--- a/Bootstrap/css/custom.css
+++ b/Bootstrap/css/custom.css
@@ -1,11 +1,11 @@
 .jumbotron{
-  background: url('https://images.unsplash.com/photo-1447933601403-0c6688de566e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1856&q=80');
+  background: url('https://res.cloudinary.com/dq2sec0lx/image/upload/v1589746813/photo-1447933601403-0c6688de566e_zarfvf.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .jumbotron.about {
-  background: url('https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gh-how-to-make-coffee-at-home-1587673913.png?crop=1.00xw:0.769xh;0,0&resize=640:*');
+  background: url('https://res.cloudinary.com/dq2sec0lx/image/upload/v1589747709/gh-how-to-make-coffee-at-home-1587673913.png_buetfa.png');
   text-align: center;
   background-repeat: no-repeat;
   background-size: cover;
